[gd_scene load_steps=10 format=3 uid="uid://bwcq71q7didmr"]

[ext_resource type="Script" path="res://ui/game_over.gd" id="1_8gxou"]
[ext_resource type="Theme" uid="uid://d0ifc4kse0sbj" path="res://ui/theme/theme.tres" id="1_hn0af"]
[ext_resource type="Shader" path="res://visual_effects/gaussian_x.gdshader" id="3_mxrtq"]
[ext_resource type="Shader" path="res://visual_effects/gaussian_y.gdshader" id="4_780sj"]
[ext_resource type="PackedScene" uid="uid://68a6cwugogao" path="res://ui/Leaderboard.tscn" id="5_bbvi3"]
[ext_resource type="Texture2D" uid="uid://ilsxdk1xejk2" path="res://ui/red_x.png" id="5_qydvx"]
[ext_resource type="Texture2D" uid="uid://eb8qdwstkm0d" path="res://ui/green_check.png" id="6_t2fjl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfhin"]
shader = ExtResource("3_mxrtq")
shader_parameter/blur = 4.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r45w3"]
shader = ExtResource("4_780sj")
shader_parameter/blur = 4.0

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hn0af")
script = ExtResource("1_8gxou")
fade_progress = 1.0
max_blur = 4.0
max_gray = 0.5

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="GaussianX" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_gfhin")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy2" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="GaussianY" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_r45w3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gray" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0745098, 0.0745098, 0.5)

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Game Over"
vertical_alignment = 1

[node name="RunInfo" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
offset_left = -79.0
offset_right = 79.0
offset_bottom = 87.0
grow_horizontal = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 12
columns = 2

[node name="ScoreLabel" type="Label" parent="RunInfo"]
layout_mode = 2
text = "Score:"

[node name="Score" type="Label" parent="RunInfo"]
layout_mode = 2
text = "12345"

[node name="TimeLabel" type="Label" parent="RunInfo"]
layout_mode = 2
text = "Time:"

[node name="Time" type="Label" parent="RunInfo"]
layout_mode = 2
text = "1:23:45"

[node name="BossKillLabel" type="Label" parent="RunInfo"]
layout_mode = 2
text = "Boss Kills:"

[node name="BossKills" type="Label" parent="RunInfo"]
layout_mode = 2
text = "123"

[node name="Options" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 32

[node name="PlayAgainButton" type="Button" parent="Options"]
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="Options"]
layout_mode = 2
text = "Main Menu"

[node name="Leaderboard" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="Leaderboard"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/PanelContainer"]
layout_mode = 2

[node name="Leaderboard" parent="Leaderboard/PanelContainer/VBoxContainer" instance=ExtResource("5_bbvi3")]
layout_mode = 2
size_flags_vertical = 3

[node name="SubmissionStatus" type="Label" parent="Leaderboard/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Your run has been submitted"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Leaderboard/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Username:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="UsernameEdit" type="LineEdit" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Anonymous"

[node name="BadUsername" type="TextureRect" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_qydvx")

[node name="GoodUsername" type="TextureRect" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_t2fjl")

[node name="SubmitButton" type="Button" parent="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="Options/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="Options/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Leaderboard/PanelContainer/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
